# RitoAPI

./: client.py  endpoints.yaml  middleware.py  parse_endpoints.py  pyproject.toml  ratelimiting.py  run.py  server.py  settings.py
